fix problem with font color in header on mobile

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -78,6 +78,12 @@ hr.small {
   padding-top: 1px!important;
   padding-bottom: 1px!important;
 }
+.intro-header .site-heading,
+.intro-header .post-heading,
+.intro-header .page-heading {
+  padding: 100px 0 50px;
+  color: white;
+}
 
 @media only screen and (min-width: 768px) {
     .navbar-custom.is-fixed .nav   .dropdown-menu>li>a {
